--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
               <!-- Add your profile picture here-->
-              <Img src="C:\Users\ELCOT\3D Objects\profile\IMG-20220405-WA0011 (2).jpg" alt="Your Profile Picture" class="profile-picture">
+              <Img src="IMG-20220405-WA0011 (2).jpg" alt="Your Profile Picture" class="profile-picture">
               <h1>SANTHIYA C<h1>
               <p>CS</p>
         </div>
@@ -135,7 +135,7 @@
         <center>
         <div class="section-content">
              <h2>Resume</h2>
-             <a href="C:\Users\ELCOT\3D Objects\profile\santhiya resume.docx"class="download-button">Download CV</a>
+             <a href="santhiya resume.docx"class="download-button">Download CV</a>
         </div>
         </center>
     </section>
