--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="header-content">
               <!-- Add your profile picture here-->
-              <Img src="Santhiya.jpg" alt="Your Profile Picture" class="profile-picture">
+              <Img src="C:\Users\ELCOT\3D Objects\profile\Santhiya.jpg" alt="Your Profile Picture" class="profile-picture">
               <h1>SANTHIYA C<h1>
               <p>CS</p>
         </div>
